fix: fixed issue with padding not aligned

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ main {
     height: 30vh;
     font-family: 'Merienda', cursive;
     width: 100vw;
-    padding: 0 10vh 0 10vw;
+    padding: 0 10vw 0 10vw;
 }
 
 .container--text h1 {
@@ -46,7 +46,7 @@ main {
     justify-content: center;
     align-items: center;
     height: 40vh;
-    padding: 0 10vh 0 10vw;
+    padding: 0 10vw 0 10vw;
 }
 
 .success--btn {
